2011-12-19
Fixed several minor bugs, in particular in building stable versions from upstream.

2011-12-06b
Removed hardcoded condition for Portfile, so that the script doesn't fail if there is a revision bump from macports. 

2011-12-06
dmg packages are no longer built by default, but only when the --dmg argument is passed.

2011-12-05
First Release